--- a/SpringJPASample/.project
+++ b/SpringJPASample/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>SpringJPASample</name>
+	<name>StudentEnrollment</name>
 	<comment></comment>
 	<projects>
 	</projects>
