--- a/SpringJPASample/src/main/webapp/WEB-INF/web.xml
+++ b/SpringJPASample/src/main/webapp/WEB-INF/web.xml
@@ -19,5 +19,8 @@
   <listener>
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   </listener>
+  <listener>
+        <listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
+  </listener>
   <display-name>Archetype Created Web Application</display-name>
 </web-app>
