--- a/SpringJPASample/pom.xml
+++ b/SpringJPASample/pom.xml
@@ -73,6 +73,12 @@
 		    <version>1.0.11</version>
 		</dependency>
 		<dependency>
+		   <groupId>org.springframework</groupId>
+		   <artifactId>spring-aspects</artifactId>
+		   <version>3.2.0.RELEASE</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-jpa</artifactId>
 			<version>1.3.0.RELEASE</version>
